--- a/stylee.css
+++ b/stylee.css
@@ -46,7 +46,7 @@ main{
   text-align: center;
 }
 
-.content p:nth-of-type(2)::first-letter {
+.contents p:nth-of-type(2)::first-letter {
   font-weight: bold;
   color: rgb(97,206,249);
    /* content imgの所確認 */
